# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("certificate_transparency") {
  sources = [
    "chrome_ct_policy_enforcer.cc",
    "chrome_ct_policy_enforcer.h",
    "chrome_require_ct_delegate.cc",
    "chrome_require_ct_delegate.h",
    "ct_known_logs.cc",
    "ct_known_logs.h",
    "pref_names.cc",
    "pref_names.h",
  ]

  deps = [
    "//base",
    "//components/base32",
    "//components/certificate_transparency/data:ct_log_list",
    "//components/prefs",
    "//components/url_formatter",
    "//components/url_matcher",
    "//net",
    "//url",
  ]
}
