# Copyright 2021 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("power_scheduler") {
  sources = [
    "power_mode.cc",
    "power_mode.h",
    "power_mode_arbiter.cc",
    "power_mode_arbiter.h",
    "power_mode_voter.cc",
    "power_mode_voter.h",
    "traced_power_mode.cc",
    "traced_power_mode.h",
  ]

  defines = [ "IS_POWER_SCHEDULER_IMPL" ]

  deps = [ "//base" ]
}
